--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      if ('serviceWorker' in navigator) {
+         navigator.serviceWorker.register('./sw.js').then(() => {
+           console.log("Service worker registered");
+         })
+      }
+    </script>
     
   </body>
 </html>
